objects/SGR_Opportunity_Benefit_Agreement__c.object
<CustomObject>
    <description>This object is connected to Opportunity object using a look up field (Opportunity).</description>
    <fields>
        <fullName>ACA_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACA Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Number__c</fullName>
        <label>Benefit Agreement Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>This field is used to capture the BlueStar - Code indicating the reason for a cancellation or reinstatement initiated at the Benefit Agreement level.</description>
        <label>Cancellation/Reinstatement Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CBA – Cancel Benefit Agreement</fullName>
                </value>
                <value>
                    <fullName>RBA - Reinstatement Benefit Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation/Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>PREM</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_BA__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Type_Code__c</fullName>
        <label>Insurance Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Product Line of Business(H,D,V)</description>
        <formula>TEXT( Plan1__r.Line_Of_Business__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID_13__c</fullName>
        <formula>Plan1__r.Marketing_Plan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Plan ID-13</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID_7__c</fullName>
        <formula>Plan1__r.Plan_Sales_ID__c</formula>
        <label>Marketing Plan ID-7</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Name__c</fullName>
        <formula>Plan1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Benefit Agreements</relationshipLabel>
        <relationshipName>Opportunity_Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunity Benefit Agreements</relationshipLabel>
        <relationshipName>Opportunity_Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>RC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Benefit Agreements</relationshipLabel>
        <relationshipName>Opportunity_Benefit_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_End_Date__c</fullName>
        <label>Rate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <label>Renewal Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JANUARY</fullName>
                </value>
                <value>
                    <fullName>FEBRUARY</fullName>
                </value>
                <value>
                    <fullName>MARCH</fullName>
                </value>
                <value>
                    <fullName>APRIL</fullName>
                </value>
                <value>
                    <fullName>MAY</fullName>
                </value>
                <value>
                    <fullName>JUNE</fullName>
                </value>
                <value>
                    <fullName>JULY</fullName>
                </value>
                <value>
                    <fullName>AUGUST</fullName>
                </value>
                <value>
                    <fullName>SEPTEMBER</fullName>
                </value>
                <value>
                    <fullName>OCTOBER</fullName>
                </value>
                <value>
                    <fullName>NOVEMBER</fullName>
                </value>
                <value>
                    <fullName>DECEMBER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_RemovedPlan__c</fullName>
        <formula>Plan1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGR_RemovedPlan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Benefit Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_Plan_ID_13__c</field>
            <operation>equals</operation>
            <value>5689</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Benefit Agreement Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Benefit Agreements</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Benefit_Agreement</fullName>
        <active>true</active>
        <description>SGR Opportunity Benefit Agreement RecordType</description>
        <label>SGR Opportunity Benefit Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>